limit width of addon thumbnail, to not overlap experimental add-on checkbox (bug 505177, p=milos, r=fwenzel)
git-svn-id: http://svn.mozilla.org/addons/trunk@48153 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/site/app/webroot/css/amo2009/main-mozilla.css
+++ b/site/app/webroot/css/amo2009/main-mozilla.css
@@ -766,6 +766,7 @@ p.addon-search-message {
 
 #addon .featured .secondary {
     margin-bottom: 0;
+    max-width: 205px;
 }
 
 #review-box {
